--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="app/css/master.css">
     <link rel="stylesheet" type="text/css" media="screen" href="app/css/app.css">
-    <script src="js/app.js"></script>
+    <script src="app/js/app.js"></script>
+    <script src="app/js/config.js"></script>
 </head>
 
 <body>
