--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                         </h2>
                     </div>
                     <div class="column is-1">
-                        <a class="button is-large" id="new-lead-button"><img src="/assets/logo.svg" width="80">
+                        <a class="button is-large" id="new-lead-button"><i class="fas fa-plus"></i>
                         </a>
                     </div>
                 </div>
