Add custom date field and field control

--- a/app/index.html
+++ b/app/index.html
@@ -59,9 +59,13 @@
 
                 <p class="desc">Size</p>
                 <input id="new-size" class="input" type="text" placeholder="Large" name="size">
+
+                <p class="desc">Date/Time (Optional)</p>
+                <input id="new-time" class="input" type="datetime-local" max="" name="date-time">
             </section>
             <footer class="modal-card-foot">
                 <a class="button is-success" id="addBoba"><i class="fas fa-check-circle"></i>&nbsp;OK!</a>
+                <span style="color: red" class="is-hidden" id="error-msg">No error message.</span>
             </footer>
         </div>
     </div>
