Mobile design optimized

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
                     </span>
                 </div>
                 <div class="columns"> 
-                    <div class="column is-11">
+                    <div class="column">
                         <h1 class="title is-spaced">
                             Greetings! <span id="cust-greeting"></span>
                         </h1>
@@ -30,8 +30,8 @@
                             <span id="dow"></span> <span id="digest"></span>
                         </h2>
                     </div>
-                    <div class="column is-1">
-                        <a class="button is-large" id="new-lead-button"><i class="fas fa-plus"></i>
+                    <div class="column is-1" id="button-column">
+                        <a class="button is-large is-warning" id="new-lead-button"><i class="fas fa-plus"></i>
                         </a>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
             </footer>
         </div>
     </div>
-    <div class="container" style="padding: 5px">
+    <div class="logs container">
         <br />
         <h2 class="subtitle">#tbt your most recent bobas...</h2>
         <div class="notification has-text-centered" id="is-empty">
